FIX(styles.css): adds z-index to settings overlay and alter problem z-index to keep overlay on top

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,6 +42,7 @@ body {
     top: 0;
     left: 0;
     display: flex;
+    z-index: 999;
 }
 
 #settings {
@@ -134,7 +135,7 @@ input[type='text'] {
     align-items: center;
     font-size: 8vh;
     color: #fff;
-    z-index: 998;
+    z-index: 997;
 }
 
 /* ------------------ / GAME AREA ------------------ */
